--- a/src/index.css
+++ b/src/index.css
@@ -16,17 +16,26 @@
   --darkblue: #003c50;
   --darkestblue: #002F3D;
   --orange: #e05926;
+  --lightgrey: #f3f3f3;
 }
 
 /* Large Container Styling */
 * {
   border-radius: 0 !important;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
+/* html {
+  background-color: #f3f3f3;
+} */
+
 body {
-  background-color: var(--lightblue);
-  color: var(--darkblue);
+  color: #151515;
   margin: 0;
+  box-sizing: border-box;
+  
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -35,46 +44,55 @@ body {
   
 }
 
-/* .row, .App {
-  --bs-gutter-x: 0rem !important;
-} */
-
 
 .dashBody {
-  padding: 1rem 5rem 1rem 5rem;
+  padding: 1vh 7vw 1vh 7vw;
+  /* background-color: #f3f3f3; */
 }
 
-.BodyRow {
+.body-row .header-row {
   margin: 0 !important;
+}
+
+.indicator-row{
+  margin-bottom: 1vh !important;
 }
 
 /* Header Styling */
 
 .HeaderDiv{
+  box-sizing: border-box;
   display: flex;
-  /* justify-content: flex-start; */
   align-items: center !important;
   gap: 30px;
   background-color: var(--darkestblue);
   color: white;
   height: 7vh;
-  /* padding: 1; */
-  padding: 0.7rem 5rem 0rem 5rem !important;
-  /* color: var(--darkblue); */
+  /* padding: 0.5rem 0.5rem 0.5rem 1rem !important; */
+  padding: 0.5vh 5vw 0.5vh 5vw !important;
   
 }
 
 h1{
   font-family: LegatoOT-Bold;
-  font-size: 2em;
+  font-size: 1.25rem !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   align-self: center;
   margin-bottom: 0 !important;
+  text-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
 }
 
+h2{
+  font-family: LegatoOT-Bold;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 1.4rem !important;
+  text-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+}
+
+
 #BPDALogo {
-  /* width: 2.5rem; */
   width: 15rem;
   align-self: center;
 }
@@ -85,41 +103,42 @@ h1{
 
 .subHeader {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  flex-direction: row;
   align-content: center;
-  padding: 0.75rem 5rem 0rem 5rem !important;
+  /* padding: 0.75rem 5rem 0rem 5rem !important; */
+  /* padding: 0.5rem 0.7rem 0rem 0.70rem !important; */
+  padding: 1vh 4.5vw 0vh 4.5vw !important;
   background-color: var(--darkblue);
   color: white;
 }
 
-h2{
-  font-family: LegatoOT-Bold;
-  font-size: 1.5em;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 .subHeader > h2 {
-  font-size: 1.4em;
-  padding: 0rem;
+  padding: 0rem 0rem 0rem 0.5rem;
 }
 
 
 /* Indicator Styling  */
-
-.indicatorContainer, .chartContainer{
-  /* regular shadow */
-  /* box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%) !important; */
-
-  /* light shadow */
+.indicatorContainer, .chartContainer, .recharts-responsive-container{
   box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
+  padding: 0.75rem;
+  margin: 0.5rem 0 0.5rem 0;
+}
+
+.indicatorContainer{
+  height: 12vh;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  overflow: hidden;
 }
 .accentNumber {
   color: var(--mediumblue);
 }
 
-.indicatorSubtext {
-  font-size: 1vw;
+.indicatorSubtext, h4 {
+  font-size: 0.8rem !important;
+  /* font-size: min(0.7rem, 1rem); */
 }
 
 .accentSubText {
@@ -130,14 +149,128 @@ h2{
 
 /* Recharts Styling */
 
-.recharts-legend-item, .recharts-default-tooltip { font-size: 0.75rem; }
+.recharts-legend-item, .recharts-default-tooltip { 
+  font-size: 0.70rem; 
+}
 
 .recharts-responsive-container, .recharts-wrapper {
   background-color: white;
 }
 
 .chartTitle {
-  font-size: 1vw;
+  font-size: 1rem;
+  text-align: center;
   font-weight: bold;
+  text-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
 }
 
+/* Button Styling */
+#infoI {
+  box-sizing: border-box;
+  margin: 5px;
+}
+
+.citation {
+  font-size: 0.7rem;
+  opacity: .7;
+}
+
+.underlineButton {
+  opacity: 80%;
+  cursor: pointer;
+  display: inline-block;
+  color: #FFF;
+  position: relative;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+.underlineButton:hover {
+  opacity: 100%;
+  color: #FFF;
+  transition: 0.3s;
+}
+
+.underlineButton::before {
+  content: '';
+  position: absolute;
+  width: 85%;
+  height: 4px;
+  border-radius: 0px;
+  background: var(--orange);
+  bottom: 0;
+  left: 0.2rem;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .4s ease-in-out;
+}
+
+.underlineButton:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
+  
+}
+
+.nav-link {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+.nav-link:hover {
+  color: var(--mediumblue) !important;
+  transition: 0.3s;
+}
+
+.nav-link::before {
+  content: '';
+  position: absolute;
+  width: 50%;
+  height: 3px;
+  border-radius: 0px;
+  background: rgb(224,89,38);
+background: linear-gradient(90deg, rgba(224,89,38,1) 0%, rgba(224,89,38,1) 78%, rgba(255,255,255,1) 100%);
+  bottom: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .3s ease-out;
+  /* add an ease out here seperate & quicker */
+  color: var(--mediumblue) !important;
+}
+
+.nav-link:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
+  color: var(--mediumblue) !important;
+  
+}
+
+svg {
+  filter: drop-shadow(0 .5rem 1rem rgb(0 0 0 / 0.15));
+}
+
+/* Media Query For Wide Screens*/
+@media (min-width: 1400px) {
+  h1 {
+    font-size: 2.5rem !important;
+  }
+  .subHeader {
+    padding: 1vh 4.5vw 0vh 4.5vw !important;
+  }
+
+  .indicatorSubtext, h4, indicatorContainer {
+    font-size: clamp(0.7rem, 1vw, 1.3rem) !important;
+  }
+
+  .indicator-row{
+    margin-bottom: 3vh !important;
+  }
+
+  .chartTitle {
+    font-size: 1.4rem;
+  }
+
+  .recharts-legend-item, .recharts-default-tooltip, .citation { 
+    font-size: 0.9rem; 
+  }
+}
