--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,18 @@
   src: url("./Fonts/LegatoOT-Bold.otf");
 }
 
+@font-face {
+  font-family: "AvenirNextLTPro-Regular";
+  src: url("./Fonts/AvenirNextLTPro-Regular.otf");
+}
+
+@font-face {
+  font-family: "OpenSans-Regular";
+  src: url("./Fonts/OpenSans-Regular.ttf");
+}
+
+
+
 :root {
   --lightblue: #e8f3f6;
   --mediumblue: #00a6b4;
@@ -27,18 +39,18 @@
   margin: 0;
 }
 
-/* html {
+html {
   background-color: #f3f3f3;
-} */
+}
 
 body {
   color: #151515;
   margin: 0;
   box-sizing: border-box;
-  
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: OpenSans-Regular !important;
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   
@@ -55,7 +67,7 @@ body {
 }
 
 .indicator-row{
-  margin-bottom: 1vh !important;
+  margin-bottom: 3vh !important;
 }
 
 /* Header Styling */
@@ -69,8 +81,7 @@ body {
   color: white;
   height: 7vh;
   /* padding: 0.5rem 0.5rem 0.5rem 1rem !important; */
-  padding: 0.5vh 5vw 0.5vh 5vw !important;
-  
+  padding: 1vh 5vw 0.5vh 5vw !important; 
 }
 
 h1{
@@ -108,9 +119,11 @@ h2{
   align-content: center;
   /* padding: 0.75rem 5rem 0rem 5rem !important; */
   /* padding: 0.5rem 0.7rem 0rem 0.70rem !important; */
-  padding: 1vh 4.5vw 0vh 4.5vw !important;
+  padding: 1vh 4.5vw 0vh 6vw !important;
+  margin-bottom: 1.5vh;
   background-color: var(--darkblue);
   color: white;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15) !important;
 }
 
 .subHeader > h2 {
@@ -138,6 +151,7 @@ h2{
 
 .indicatorSubtext, h4 {
   font-size: 0.8rem !important;
+  font-weight: bold !important;
   /* font-size: min(0.7rem, 1rem); */
 }
 
@@ -254,8 +268,12 @@ svg {
   h1 {
     font-size: 2.5rem !important;
   }
+
+  h2 {
+    font-size: 1.6rem !important;
+  }
   .subHeader {
-    padding: 1vh 4.5vw 0vh 4.5vw !important;
+    padding: 1vh 4.5vw 0vh 5.2vw !important;
   }
 
   .indicatorSubtext, h4, indicatorContainer {
@@ -263,7 +281,7 @@ svg {
   }
 
   .indicator-row{
-    margin-bottom: 3vh !important;
+    margin-bottom: 2vh !important;
   }
 
   .chartTitle {
