finishes real estate dev and snapshot economy

--- a/src/index.css
+++ b/src/index.css
@@ -167,8 +167,12 @@ h2{
   font-size: 0.70rem; 
 }
 
+/* .recharts-default-tooltip {
+  z-index: 10;
+} */
 .recharts-responsive-container, .recharts-wrapper {
   background-color: white;
+  z-index: 10;
 }
 
 .chartTitle {
