--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ body {
     sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
+
 }
 
 
@@ -66,16 +66,17 @@ body {
   margin: 0 !important;
 }
 
-.indicator-row{
+.indicator-row {
   margin-bottom: 2vh !important;
 }
 
-#aboutCanvas{
-  width:700px !important;
+#aboutCanvas {
+  width: 700px !important;
 }
+
 /* Header Styling */
 
-.HeaderDiv{
+.HeaderDiv {
   box-sizing: border-box;
   display: flex;
   align-items: center !important;
@@ -84,10 +85,10 @@ body {
   color: white;
   height: 7vh;
   /* padding: 0.5rem 0.5rem 0.5rem 1rem !important; */
-  padding: 1vh 5vw 0.5vh 2.9vw !important; 
+  padding: 1vh 5vw 0.5vh 2.9vw !important;
 }
 
-h1{
+h1 {
   font-family: LegatoOT-Bold;
   /* font-size: 1.25rem !important; */
   font-size: calc(0.6rem + 1.9vw) !important;
@@ -95,19 +96,19 @@ h1{
   -moz-osx-font-smoothing: grayscale;
   align-self: center;
   margin-bottom: 0 !important;
-  text-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+  text-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
 }
 
-h2{
+h2 {
   font-family: LegatoOT-Bold;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* font-size: 1.4rem !important; */
   font-size: calc(1.3rem + 1vw) !important;
-  text-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+  text-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
 }
 
-h5{
+h5 {
   font-size: 0.65rem;
 }
 
@@ -132,35 +133,39 @@ h5{
   margin-bottom: 1vh;
   background-color: var(--darkblue);
   color: white;
-  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15) !important;
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
 }
 
-.subHeader > h2 {
+.subHeader>h2 {
   padding: 0rem 0rem 0rem 0.5rem;
   margin-bottom: 0.4vh !important;
 }
 
 
 /* Indicator Styling  */
-.indicatorContainer, .chartContainer, .recharts-responsive-container{
-  box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
+.indicatorContainer,
+.chartContainer,
+.recharts-responsive-container {
+  box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075) !important;
   padding: 0.75rem;
   padding: 1vh;
   /* margin: 1vh 0 1vh 0; */
 }
 
-.indicatorContainer{
+.indicatorContainer {
   height: 12vh;
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
   overflow: auto;
 }
+
 .accentNumber {
   color: var(--mediumblue);
 }
 
-.indicatorSubtext, h4 {
+.indicatorSubtext,
+h4 {
   font-size: 0.8rem !important;
   font-weight: bold !important;
   /* font-size: min(0.7rem, 1rem); */
@@ -178,21 +183,24 @@ h5{
   box-sizing: border-box; */
 }
 
-#commuterMapCol{
+#commuterMapCol {
   padding: 1.5vh;
 }
-#commuterMapDiv, #commuterMap {
+
+#commuterMapDiv,
+#commuterMap {
   display: flex;
   flex-direction: column;
-  flex-grow: 1!important;
+  flex-grow: 1 !important;
   padding: 0.5vh;
   box-sizing: border-box;
 }
 
 /* Recharts Styling */
 
-.recharts-legend-item, .recharts-default-tooltip { 
-  font-size: 0.70rem; 
+.recharts-legend-item,
+.recharts-default-tooltip {
+  font-size: 0.70rem;
 }
 
 .recharts-responsive-container {
@@ -217,7 +225,7 @@ h5{
   font-size: 1rem;
   text-align: center;
   font-weight: bold;
-  text-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+  text-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
   margin-bottom: 0 !important;
 }
 
@@ -227,11 +235,11 @@ h5{
   margin: 0 !important;
 }
 
-.recharts-line > path {
+.recharts-line>path {
   stroke-width: 2;
 }
 
-line.recharts-legend-icon  {
+line.recharts-legend-icon {
   stroke-width: 6;
 }
 
@@ -256,6 +264,7 @@ line.recharts-legend-icon  {
   box-sizing: border-box;
   text-decoration: none;
 }
+
 .underlineButton:hover {
   opacity: 100%;
   color: #FFF;
@@ -279,7 +288,7 @@ line.recharts-legend-icon  {
 .underlineButton:hover::before {
   transform-origin: left;
   transform: scaleX(1);
-  
+
 }
 
 .nav-link {
@@ -290,6 +299,7 @@ line.recharts-legend-icon  {
   box-sizing: border-box;
   text-decoration: none;
 }
+
 .nav-link:hover {
   color: var(--mediumblue) !important;
   transition: 0.3s;
@@ -301,8 +311,8 @@ line.recharts-legend-icon  {
   width: 50%;
   height: 3px;
   border-radius: 0px;
-  background: rgb(224,89,38);
-  background: linear-gradient(90deg, rgba(224,89,38,1) 0%, rgba(224,89,38,1) 78%, rgba(255,255,255,1) 100%);
+  background: rgb(224, 89, 38);
+  background: linear-gradient(90deg, rgba(224, 89, 38, 1) 0%, rgba(224, 89, 38, 1) 78%, rgba(255, 255, 255, 1) 100%);
   bottom: 0;
   transform-origin: right;
   transform: scaleX(0);
@@ -314,7 +324,7 @@ line.recharts-legend-icon  {
   transform-origin: left;
   transform: scaleX(1);
   color: var(--mediumblue) !important;
-  
+
 }
 
 svg {
@@ -325,7 +335,7 @@ svg {
   margin-bottom: 1.5em;
 }
 
-.list-unstyled > li {
+.list-unstyled>li {
   font-size: 1.1rem;
 }
 
@@ -337,23 +347,28 @@ svg {
     width: 100vw;
     box-sizing: border-box;
   }
-  .App, #AppContainer {
+
+  .App,
+  #AppContainer {
     box-sizing: border-box;
     height: 100%;
     width: 100%;
   }
-  #headerRow{
+
+  #headerRow {
     box-sizing: border-box;
     box-sizing: border-box;
     height: 7%;
   }
-  #bodyRow{
+
+  #bodyRow {
     height: 93%;
     border-radius: 0 !important;
     box-sizing: border-box !important;
     padding: 0 !important;
     margin: 0 !important;
   }
+
   #bodyColumn {
     height: 100%;
     border-radius: 0 !important;
@@ -361,30 +376,36 @@ svg {
     padding: 0 !important;
     margin: 0 !important;
   }
-  #dashboard{
+
+  #dashboard {
     height: 100%;
     box-sizing: border-box;
   }
+
   .subHeader {
     box-sizing: border-box;
     height: 3.5%;
     padding: 1vh 4.5vw 0vh 3.2vw !important;
   }
-  .dashBody{
+
+  .dashBody {
     height: 95.5%;
     box-sizing: border-box;
   }
-  .indicator-row{
+
+  .indicator-row {
     box-sizing: border-box;
     height: 8%;
     padding-bottom: 1vh !important;
     margin-bottom: 0 !important;
   }
-  .indicatorContainer{
+
+  .indicatorContainer {
     height: 100%;
     box-sizing: border-box;
   }
-  .graph-row{
+
+  .graph-row {
     box-sizing: border-box;
     height: 46%;
     padding-top: 1.5vh;
@@ -402,7 +423,8 @@ svg {
     font-size: calc(0.60rem + 0.8vw) !important;
   }
 
-  .indicatorSubtext, h4 {
+  .indicatorSubtext,
+  h4 {
     /* font-size: clamp(0.7rem, 1vw, 1.3rem) !important; */
     margin-top: 0.5rem;
     font-size: calc(0.1rem + 0.7vw) !important;
@@ -418,8 +440,11 @@ svg {
   .subChartTitle {
     font-size: calc(0.1rem + 0.75vw) !important;
   }
-  .recharts-legend-item, .recharts-default-tooltip, .citation { 
-    font-size: calc(0.1rem + 0.65vw); 
+
+  .recharts-legend-item,
+  .recharts-default-tooltip,
+  .citation {
+    font-size: calc(0.1rem + 0.65vw);
   }
 
   iframe {
@@ -427,10 +452,9 @@ svg {
     padding: 0.6rem;
   }
 
-  #commercialHub{
+  #commercialHub {
     width: 100%;
   }
-  
+
 
 }
-
