--- a/src/index.css
+++ b/src/index.css
@@ -201,7 +201,7 @@ h4 {
 }
 
 #commuterMapCol {
-  padding: 1.5vh;
+  padding:  0vh 0.5vh 1vh 0.5vh;
 }
 
 #commuterMapDiv,
@@ -209,9 +209,10 @@ h4 {
   display: flex;
   flex-direction: column;
   flex-grow: 1 !important;
-  padding: 0.5vh;
+  padding: 0vh 0.5vh 1vh 0.5vh;
   box-sizing: border-box;
 }
+
 
 /* Recharts Styling */
 
@@ -466,7 +467,7 @@ svg {
 
   iframe {
     box-sizing: border-box;
-    padding: 0.6rem;
+    padding: 0.6rem !important;
   }
 
   #commercialHub {
