adds graphs to new page

--- a/src/index.css
+++ b/src/index.css
@@ -438,6 +438,10 @@ iframe {
     padding-top: 1.5vh;
   }
 
+  .graph-one-row {
+    height: 100%;
+  }
+
   .graph-column {
     height: 100%
   }
@@ -454,7 +458,7 @@ iframe {
   h4 {
     /* font-size: clamp(0.7rem, 1vw, 1.3rem) !important; */
     margin-top: 0.5rem;
-    font-size: calc(0.1rem + 0.7vw) !important;
+    font-size: calc(0.1rem + 0.65vw) !important;
     /* font-size: clamp(calc(0.1rem + 0.6vw), calc(0.1rem + 0.8vw), calc(0.1rem + 0.8vw)) !important; */
   }
 
