rebranding fonts and language

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -4,7 +4,7 @@
 
 // set custom color bases
 $custom-colors: (
-  "boylstonblue": #003c50
+  "boylstonblue": #091F2F
 );
 
 // merge with bootstrap's color map
