--- a/src/index.css
+++ b/src/index.css
@@ -20,16 +20,38 @@
   src: url("./Fonts/OpenSans-Regular.ttf");
 }
 
+@font-face {
+  font-family: "Montserrat-Regular";
+  src: url("./Fonts/Montserrat-Regular.ttf");
+}
+@font-face {
+  font-family: "Montserrat-Bold";
+  src: url("./Fonts/Montserrat-Bold.ttf");
+}
+
+@font-face {
+  font-family: "Lora-Regular";
+  src: url("./Fonts/Lora-Regular.ttf");
+}
 
 
-:root {
+/* :root {
   --lightblue: #e8f3f6;
   --mediumblue: #00a6b4;
   --darkblue: #003c50;
   --darkestblue: #002F3D;
   --orange: #e05926;
   --lightgrey: #f3f3f3;
+} */
+:root {
+  --lightblue: #e8f3f6;
+  --mediumblue: #1871bd;
+  --darkblue: #091F2F;
+  --darkestblue: #061622;
+  --orange: #FB4D42;
+  --lightgrey: #F2F2F2;
 }
+
 
 /* Large Container Styling */
 * {
@@ -40,14 +62,14 @@
 }
 
 html {
-  background-color: #f3f3f3;
+  background-color: #F2F2F2;
 }
 
 body {
   color: #151515;
   margin: 0;
   box-sizing: border-box;
-  font-family: OpenSans-Regular !important;
+  font-family: Lora-Regular !important;
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
@@ -92,23 +114,25 @@ body {
 }
 
 h1 {
-  font-family: LegatoOT-Bold;
+  font-family: Montserrat-Bold;
   /* font-size: 1.25rem !important; */
-  font-size: calc(0.6rem + 1.9vw) !important;
+  font-size: calc(0.2rem + 1.9vw) !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   align-self: center;
   margin-bottom: 0 !important;
   text-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
+  text-transform: uppercase;
 }
 
 h2 {
-  font-family: LegatoOT-Bold;
+  font-family: Montserrat-Bold;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* font-size: 1.4rem !important; */
-  font-size: calc(1.3rem + 1vw) !important;
+  font-size: calc(.9rem + 1vw) !important;
   text-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
+  text-transform: uppercase;
 }
 
 h5 {
@@ -181,10 +205,16 @@ h5 {
   color: var(--mediumblue);
 }
 
-.indicatorSubtext,
+.indicatorSubtext{
+  font-size: 0.8rem !important;
+  font-weight: bold !important;
+}
+
 h4 {
   font-size: 0.8rem !important;
   font-weight: bold !important;
+  text-transform: uppercase;
+  font-family: Montserrat-Bold;
   /* font-size: min(0.7rem, 1rem); */
 }
 
@@ -245,6 +275,8 @@ h4 {
   font-weight: bold;
   text-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
   margin-bottom: 0 !important;
+  font-family: Montserrat-Bold;
+  text-transform: uppercase;
 }
 
 .subChartTitle {
@@ -310,7 +342,7 @@ line.recharts-legend-icon {
 }
 
 .nav-link {
-  color: #003c50 !important;
+  color: #091F2F!important;
   cursor: pointer;
   display: inline-block;
   position: relative;
@@ -447,11 +479,11 @@ iframe {
   }
 
   h1 {
-    font-size: calc(0.25rem + 1.9vw) !important;
+    font-size: calc(0.1rem + 1.5vw) !important;
   }
 
   h2 {
-    font-size: calc(0.60rem + 0.8vw) !important;
+    font-size: calc(0.45rem + 0.8vw) !important;
   }
 
   .indicatorSubtext,
