Updating Mobility.js for BlueBikes
Added code for bluebikes graph, all data processing parts still in comment mode. Currently the vignette that would show bluebikes data is showing all mbta validations (since will follow similar style). Adjusted media query for wide screens to accomodate blue bikes additional row. Makes slightly diff view but now will allow for more rows.

--- a/src/index.css
+++ b/src/index.css
@@ -402,7 +402,8 @@ iframe {
 /* Media Query For Wide Screens*/
 @media (min-width: 1400px) {
   #root {
-    height: 100vh;
+    /*height: 100vh;*/
+    height:100%;
     width: 100vw;
     box-sizing: border-box;
   }
