--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ body {
   color: #151515;
   margin: 0;
   box-sizing: border-box;
-  font-family: Lora-Regular !important;
+  font-family: Montserrat-Regular !important;
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
@@ -301,6 +301,7 @@ line.recharts-legend-icon {
 
 .citation {
   font-size: 0.6rem;
+  font-family: Lora-Regular;
   opacity: .7;
   margin-bottom: 0.5rem;
 }
