--- a/src/index.css
+++ b/src/index.css
@@ -402,7 +402,7 @@ iframe {
 }
 
 .takeawayCardImage {
-    height:4.0vw;
+    height:3.0vw;
   }
 
   .smallertakeawayCardImage{
@@ -550,11 +550,13 @@ iframe {
   }
 
   .takeawayCardImage {
-    height:80px;
+    /*height:80px;*/
+    height:7.0vh;
   }
 
   .smallertakeawayCardImage{
-    height:70px;
+    /*height:70px;*/
+    height:6.0vh;
   }
 
   .btn-group{
